--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "website-2",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/MohemedMSD/React-Bank-Design",
   "type": "module",
   "scripts": {
     "dev": "vite",
