--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "aos": "^2.3.4",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
-    "react-countup": "^6.3.1",
+    "react-countup": "^6.3.n1",
     "react-dom": "^18.2.0",
     "react-scroll-trigger": "^0.6.14"
   },
